--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@testing-library/user-event": "^13.5.0",
     "aws4": "^1.12.0",
     "axios": "^1.5.0",
+    "dayjs": "^1.11.9",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
@@ -22,6 +24,7 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
     "react-select": "^5.7.4",
+    "sitemap": "^7.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
